--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <canvas id = "canvas" width = "696" height = "696" style = "background-color: black"></canvas>
-    <script src="main.js",charset="UTF-8"></script>
+    <script src="main.js",charset="UTF-8",touch-action:manipulation></script>
 </body>
 </html>
