--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html>
 <head>
-    <meta charset = "utf-8">
+    <meta charset = "utf-8",touch-action:manipulation>
     <title>Concentration</title>
 </head>
 <body>
     <canvas id = "canvas" width = "696" height = "696" style = "background-color: black"></canvas>
-    <script src="main.js",charset="UTF-8",touch-action:manipulation></script>
+    <script src="main.js",charset="UTF-8"></script>
 </body>
 </html>
