--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!doctype html>
 <html>
 <head>
-    <meta charset = "utf-8",touch-action:manipulation>
+    <meta charset = "utf-8">
     <title>Concentration</title>
+    <style type="text/css">p{touch-action:manipulation;}</style>
 </head>
 <body>
+<p>
     <canvas id = "canvas" width = "696" height = "696" style = "background-color: black"></canvas>
     <script src="main.js",charset="UTF-8"></script>
+</p>
 </body>
 </html>
