--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset = "utf-8">
     <title>Concentration</title>
-    <style type="text/css">p{touch-action:manipulation;}</style>
+    
 </head>
 <body>
-<p>
+    <style type="text/css">html{touch-action:manipulation;}</style>
     <canvas id = "canvas" width = "696" height = "696" style = "background-color: black"></canvas>
     <script src="main.js",charset="UTF-8"></script>
-</p>
 </body>
 </html>
