--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset = "utf-8">
     <title>Concentration</title>
-    
+    <style>body{touch-action:manipulation;}</style>
 </head>
 <body>
-    <style type="text/css">html{touch-action:manipulation;}</style>
+
     <canvas id = "canvas" width = "696" height = "696" style = "background-color: black"></canvas>
     <script src="main.js",charset="UTF-8"></script>
 </body>
